--- a/src/renderer/layout/components/header/header.scss
+++ b/src/renderer/layout/components/header/header.scss
@@ -3,11 +3,16 @@
     background-color: #3A3A3A;
     color: #FFFFFF;
     padding: 5px 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
+    z-index: 999;
 
     .header__menu {
         display: flex;
