Componente Welcome terminado, se añade interactividad con el router.

--- a/src/renderer/pages/welcome/slider/slider.scss
+++ b/src/renderer/pages/welcome/slider/slider.scss
@@ -21,6 +21,7 @@
     }
     
     .slide__area-text {
+        transition: 3s;
         position: relative;
         grid-area: 2 / 2;
         display: flex;
