--- a/src/renderer/pages/components/button/button.scss
+++ b/src/renderer/pages/components/button/button.scss
@@ -1,84 +1,82 @@
 @import '../../../commons';
 
-input {
-    background-color: $welcome-background;
-    cursor: pointer;
-    overflow: hidden;
-    text-decoration: none;
-    text-align: center;
-    padding: 10px 50px;
-    border: 2px solid rgba(0,160,80,0);
-    border-radius: 4px;
-    text-transform: uppercase;
-    // box-shadow: 0px 0px 100% red;
-    transition:0.5s;
-
+.prueba {
+  display: block;
+  position: relative;
+  padding: 1em 3em;
+  border: none;
+  border-radius:5px; 
+  background-color: rgb(66, 23, 25);
+  color: white;
 }
-.svg-wrapper {
-    text-align: center;
-    height: 60px;
-    margin: 0 auto;
-    position: relative;
-    top: 50%;
-    width: 320px;
-  }
-  
-  .shape {
-    fill: transparent;
-    stroke-dasharray: 20, 280, 20, 0, 20, 20, 20, 0, 20, 280, 20, 0, 20, 20, 20 ;
-    // stroke-dashoffset:20%;
-    stroke-width: 8px;
-    stroke: #19f6e8;
-  }
 
-  .top {
-    stroke-dasharray:10%, 120%, 10%;
-    stroke: white;
-    stroke-width: 4px;
-  }
+//Aplicar a todas las cajas
+button.prueba:before,
+button.prueba:after,
+button.prueba span:before, 
+button.prueba span:after {
+    content:'';
+    position:absolute;
+    // Tiempo de la transición
+    transition:.25s all ease-out;
+    border-radius: 5px;
+}
 
-  .left {
-    stroke-dasharray: 20, 20, 20;
-    stroke: white;
-    stroke-width: 4px;
-  }
+// Superior
+button.prueba:before {
+    z-index: 3;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 0%;
+    border-top:solid 3px white;
+}
+button.prueba:hover:before {
+   width: 100%;
+   height: 100%;
+   border-top:solid 3px white;
+}
+// Izquierda
+button.prueba:after {
+    z-index: 3;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 0%;
+    border-left: solid 3px white;
+}
+button.prueba:hover:after {
+   width: 100%;
+   height: 100%;
+   border-left: solid 3px white;
+}
 
-  .bottom {
-    stroke-dasharray:10%, 120%, 10%;
-    stroke: white;
-    stroke-width: 4px;
-  }
+//Inferior
+button.prueba span:before {
+    z-index: 3;
+    bottom: 0;
+    right: 0;
+    width: 0%;
+    height: 0%;
+    border-bottom: solid 3px white;
+}
+button.prueba:hover span:before {
+   width: 100%;
+   height: 100%;
+   border-bottom: solid 3px white;
+}
+// Derecha
+button.prueba span:after {
+    z-index: 3;
+    bottom: 0;
+    right: 0;
+    width: 0%;
+    height: 0%;
+    border-right: solid 3px white;
+}
+button.prueba:hover span:after {
+   width: 100%;
+   height: 100%;
+   border-right: solid 3px white;
+}
 
-  .right {
-    stroke-dasharray: 8%, 10%, 8%;
-    stroke: white;
-    stroke-width: 4px;
-  }
-  
-  .text {
-    color: #fff;
-    font-family: 'Roboto Condensed';
-    font-size: 22px;
-    letter-spacing: 8px;
-    line-height: 32px;
-    position: relative;
-    top: -48px;
-  }
-  
-  @keyframes draw {
-    0% {
-      stroke-dasharray: 140 540;
-      stroke-dashoffset: -474;
-      stroke-width: 8px;
-    }
-    100% {
-      stroke-dasharray: 760;
-      stroke-dashoffset: 0;
-      stroke-width: 2px;
-    }
-  }
-  
-  .svg-wrapper:hover .shape {
-    -webkit-animation: 0.5s draw linear forwards;
-    animation: 0.5s draw linear forwards;
-  }
