--- a/src/renderer/commons.scss
+++ b/src/renderer/commons.scss
@@ -5,6 +5,10 @@ $footer-background: #414141;
 $welcome-background: #81AEF1;
 $main-background: #414141;
 
+$button-border-color: rgb(182, 41, 41);
+$button-background-color: rgb(72, 174, 224);
+$button-text-color: white;
+
 
 body {
     font-size: 16px;
