--- a/src/renderer/pages/components/button/button.scss
+++ b/src/renderer/pages/components/button/button.scss
@@ -17,7 +17,7 @@
         font-size: 2em;
     }
 
-
+    
     button {
         display: block;
         position: relative;
@@ -61,26 +61,22 @@
             &:before {
                 width: 100%;
                 height: 100%;
-                border-top: solid 3px $button-border-color;
             }
 
             &:after {
                 width: 100%;
                 height: 100%;
-                border-left: solid 3px $button-border-color;
             }
 
             span {
                 &:before {
                     width: 100%;
                     height: 100%;
-                    border-bottom: solid 3px $button-border-color;
                 }
 
                 &:after {
                     width: 100%;
                     height: 100%;
-                    border-right: solid 3px $button-border-color;
                 }
             }
         }
@@ -112,6 +108,37 @@
                 height: 0%;
                 border-right: solid 3px $button-border-color;
             }
+        }
+    }
+
+    .blue {
+        background-color: blue;
+        color: black;
+        &:before, &:after {
+            border-color: black;
+        }
+        span:before, span:after {
+            border-color: black;
+        }
+    }
+    .red {
+        background-color: red;
+        color: black;
+        &:before, &:after {
+            border-color: black;
+        }
+        span:before, span:after {
+            border-color: black;
+        }
+    }
+    .green {
+        background-color: greenyellow;
+        color: black;
+        &:before, &:after {
+            border-color: black;
+        }
+        span:before, span:after {
+            border-color: black;
         }
     }
 }
