--- a/src/renderer/router/router.css
+++ b/src/renderer/router/router.css
@@ -101,6 +101,7 @@
    */
   
   a {
+    text-decoration: none;
     background-color: transparent; /* 1 */
     -webkit-text-decoration-skip: objects; /* 2 */
   }
@@ -266,6 +267,7 @@
   button,
   select { /* 1 */
     text-transform: none;
+    text-decoration: none;
   }
   
   /**
