--- a/src/renderer/pages/components/button/button.scss
+++ b/src/renderer/pages/components/button/button.scss
@@ -3,6 +3,8 @@
 
 .button-box {
     .small {
+        // height: 100px;
+        // width: 100px;
         padding: 0.5em 0.75em;
         font-size: 1em;
     }
@@ -23,7 +25,7 @@
         position: relative;
         padding: 1em 3em;
         border: none;
-        border-radius: 5px;
+        // border-radius: 5px;
         background-color: $button-background-color;
         color: $button-text-color;
 
@@ -36,7 +38,7 @@
             content: '';
             position: absolute;
             transition: .25s all ease-out;
-            border-radius: 5px;
+            // border-radius: 5px;
         }
 
         &:before {
@@ -88,7 +90,7 @@
                 content: '';
                 position: absolute; // Tiempo de la transición
                 transition: .25s all ease-out;
-                border-radius: 5px;
+                // border-radius: 5px;
             }
 
             &:before {
@@ -112,13 +114,13 @@
     }
 
     .blue {
-        background-color: blue;
-        color: black;
+        background-color: #58aad9;
+        color: white;
         &:before, &:after {
-            border-color: black;
+            border-color: #2d3e4d;
         }
         span:before, span:after {
-            border-color: black;
+            border-color: #2d3e4d;
         }
     }
     .red {
