--- a/src/renderer/pages/components/button/button.scss
+++ b/src/renderer/pages/components/button/button.scss
@@ -23,6 +23,7 @@
     button {
         display: block;
         position: relative;
+        padding: 1em 3em;
         border: none;
         // border-radius: 5px;
         background-color: $button-background-color;
