--- a/src/renderer/pages/components/modal/modal.scss
+++ b/src/renderer/pages/components/modal/modal.scss
@@ -1,7 +1,6 @@
 .modal {
     position: fixed;
-    background-color: #000000;
-    opacity: 0.6;
+    background-color: rgba(0, 0, 0, 0.6);
     left: 0;
     right: 0;
     top: 0;
@@ -12,9 +11,31 @@
 
 //    transform: translate(-50%, 0);
     .modal__area {
+        color: black;
         grid-area: 2 / 2 / span 1 / span 1;
-        background-color: #ffffff;
+        background-color: white;
         border-radius: 20px;
-        padding: 20px;
+        padding: 1em;
+        // z-index: 1011;
+        opacity: 1;
+        text-align: center;
+
+        .modal__area__title {
+            width: 100%;
+            border-radius: 1em;
+            padding: 2em 0px;
+            background-color:  blueviolet;
+
+        }
+        .modal__area__text {
+            margin-top: 20px;
+            width: 100%;
+            .modal__area__text__text {
+                color:black;
+            }
+            .modal__area__text__button {
+                color: black;
+            }
+        }
     }
 }
