--- a/src/renderer/pages/components/modal/modal.scss
+++ b/src/renderer/pages/components/modal/modal.scss
@@ -10,17 +10,25 @@
     z-index: 100;
 
 //    transform: translate(-50%, 0);
+    .modal__area::-webkit-scrollbar {
+        width: 0px;
+    }
     .modal__area {
+        overflow-x: hidden;
+        overflow-y: visible;
         color: black;
         grid-area: 2 / 2 / span 1 / span 1;
         background-color: white;
-        border-radius: 20px;
+        border-radius: 0.5em;
         padding: 1em;
-        // z-index: 1011;
         opacity: 1;
         text-align: center;
+        margin: auto;
+        max-height: 100%;
+        max-width: 100%;
 
         .modal__area__title {
+            margin: 0 auto;
             width: 100%;
             border-radius: 1em;
             padding: 2em 0px;
@@ -28,14 +36,17 @@
 
         }
         .modal__area__text {
+            margin: 0 auto;
+            // overflow-x: hidden;
+            // overflow-y: visible;
             margin-top: 20px;
-            width: 100%;
-            .modal__area__text__text {
-                color:black;
-            }
-            .modal__area__text__button {
-                color: black;
-            }
+            max-width: 100%;
+            // .modal__area__text__text {
+            //     color:black;
+            // }
+            // .modal__area__text__button {
+            //     color: black;
+            // }
         }
     }
 }
