--- a/src/renderer/pages/components/button/button.scss
+++ b/src/renderer/pages/components/button/button.scss
@@ -2,25 +2,31 @@
 
 
 .button-box {
+
     .small {
-        // height: 100px;
-        // width: 100px;
+        height: 40px;
+        width: 85px;
         padding: 0.5em 0.75em;
         font-size: 1em;
     }
 
     .medium {
-        padding: 0.5em 1em;
-        font-size: 1.5em;
+        padding: 1em 1em;
+        font-size: 1em;
+        width: 200px;
+        height: 50px;
     }
     
     .large {
-        padding: 0.75em 1em;
-        font-size: 2em;
+        padding: 1em 1em;
+        font-size: 1em;
+        width: 200px;
+        height: 50px;
     }
 
     
     button {
+        margin: 0 auto;
         display: block;
         position: relative;
         padding: 1em 3em;
