--- a/src/renderer/pages/start/start.scss
+++ b/src/renderer/pages/start/start.scss
@@ -18,4 +18,8 @@
         display: flex;
         align-items: flex-start;
     }
+
+    .start__modalAcceptButton {
+        margin-top: 1em;
+    }
 }
