--- a/src/renderer/commons.scss
+++ b/src/renderer/commons.scss
@@ -29,7 +29,7 @@ $slider-text-font-size: 1em;
 ///////////////// GENERAL COMPONETS ////////////////////////
 $main-background: #414141;
 
-$button-border-color: rgb(182, 41, 41);
+$button-border-color: #4425B0;
 $button-background-color: rgb(72, 174, 224);
 $button-text-color: white;
 
