--- a/src/renderer/pages/components/modal/modal.scss
+++ b/src/renderer/pages/components/modal/modal.scss
@@ -6,7 +6,7 @@
     top: 0;
     bottom: 0;
     display: grid;
-    grid-template: 1fr 6fr 1fr / 1fr 6fr 1fr;
+    grid-template: 1fr 6fr 2fr / 1fr 6fr 1fr;
     z-index: 100;
 
     .modal__area::-webkit-scrollbar {
@@ -15,10 +15,10 @@
     .modal__area {
         overflow-x: hidden;
         overflow-y: visible;
-        color: black;
+        color: white;
         grid-area: 2 / 2 / span 1 / span 1;
-        background-color: white;
-        border-radius: 0.5em;
+        background-color: #3c3734;
+        // border-radius: 0.5em;
         padding: 1em;
         opacity: 1;
         text-align: center;
@@ -29,13 +29,16 @@
         .modal__area__title {
             margin: 0 auto;
             width: 100%;
-            border-radius: 1em;
-            padding: 2em 0px;
-            background-color:  blueviolet;
-
+            font-size: 1.5em;
+            // border-radius: 1em;
+            padding: 1em 0px;
+            text-shadow: 2px 2px 4px #000;
+            // background: linear-gradient(-90deg, #4069a7, #82bf83);
+            // background: linear-gradient(-90deg, #485bdb, #9c35c5);
         }
         .modal__area__text {
             margin: 0 auto;
+            text-shadow: 1px 1px 4px #000;
             // overflow-x: hidden;
             // overflow-y: visible;
             margin-top: 20px;
