--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -8,23 +8,61 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <script type="application/javascript">
+
     const url = 'http://localhost:3000/serviceworker.js';
     if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function() {
-        navigator.serviceWorker.register(url).then(function(registration) {
-          console.log('ServiceWorker registration successful with scope: ', registration.scope);
-        }).catch(function(err) {
-          console.log('ServiceWorker registration failed: ', err);
-        });
+      navigator.serviceWorker.register(url).then(function(registration) {
+        console.log('ServiceWorker registration successful with scope:', registration.scope);
+        console.log(navigator.serviceWorker);  
+      }).catch(function(err) {
+        console.log('ServiceWorker registration failed:', err);
       });
+      navigator.serviceWorker.onmessage = function(msg) {
+        if ('Notification' in window) {
+          let hola = new window.Notification('MozKa', {
+            body: msg.data.text,
+            tag: 'MozKa',
+            renotify: true,
+            icon: msg.data.img,
+            image: msg.data.img,
+            data: null,
+          });
+        }
+      } 
     }
+
+    // Create Notification permission
+    if ('Notification' in window) {
+      Notification.requestPermission();
+    }
+    
+
     window.addEventListener('load', function() {
       fetch('https://swapi.co/api/people/')
         .then((res) => res.json())
         .then((res) => { console.log(res); })
-
+      
+        // fetch('http://localhost:3000/api', {
+        //             method: 'POST',
+        //             mode: 'cors',
+        //             headers: new Headers({ 'Content-Type': 'application/json' }),
+        //             body: JSON.stringify({
+        //                 nombre: 'sergio',
+        //                 apeliidos: 'garcia',
+        //             }),
+        //         })
+        // .then((res) => res.json())
+        // .then((res) => { console.log(res); })
     });
+
+
+
+  
+    // db.onerror = function(event) {
+    //   alert("Database error: " + event.target.errorCode);
+    // };
+
+
     </script>
-    
   </body>
 </html>
