service worker y conexion con el servidor, redireccion y captura de peticiones.

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -9,15 +9,21 @@
     <p>Welcome to <%= title %></p>
     <script type="application/javascript">
 
-    const url = 'http://localhost:3000/serviceworker.js';
+    // Create Notification permission
+    if ('Notification' in window) {
+      Notification.requestPermission();
+    }
+
+    // Create ServiceWorker
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register(url).then(function(registration) {
-        console.log('ServiceWorker registration successful with scope:', registration.scope);
-        console.log(navigator.serviceWorker);  
-      }).catch(function(err) {
-        console.log('ServiceWorker registration failed:', err);
+      const env = localStorage.getItem('mozkaUrlServer') || 'http://localhost:3000';
+      initServiceWorker(env);
+
+      navigator.serviceWorker.ready.then(serviceWorker => {
+        navigator.serviceWorker.controller.postMessage(env);
       });
-      navigator.serviceWorker.onmessage = function(msg) {
+
+      navigator.serviceWorker.onmessage = msg => {
         if ('Notification' in window) {
           let hola = new window.Notification('MozKa', {
             body: msg.data.text,
@@ -25,42 +31,50 @@
             renotify: true,
             icon: msg.data.img,
             image: msg.data.img,
-            data: null,
+            data: msg.data.data,
           });
         }
-      } 
+      }
+
+      function initServiceWorker(url) {
+        navigator.serviceWorker.register(url + 'serviceworker.js').then(registration => {
+          console.log('ServiceWorker registration successful with scope:', registration.scope);
+        }).catch(err => {
+          console.log('ServiceWorker registration failed:', err);
+          const youWantChange = confirm("¿La url de Mozka es erronea, quieres cambiarla?");
+          if (youWantChange) {
+            const envChange = prompt("Introduce la url donde esta corriendo Mozka", "http://localhost:3000/");
+            localStorage.setItem('mozkaUrlServer', envChange);
+            initServiceWorker(envChange);
+          }
+        });
+      }
+      
     }
 
-    // Create Notification permission
-    if ('Notification' in window) {
-      Notification.requestPermission();
-    }
+    
+    
     
 
+    // Example Fetch
     window.addEventListener('load', function() {
       fetch('https://swapi.co/api/people/')
         .then((res) => res.json())
         .then((res) => { console.log(res); })
-      
-        // fetch('http://localhost:3000/api', {
-        //             method: 'POST',
-        //             mode: 'cors',
-        //             headers: new Headers({ 'Content-Type': 'application/json' }),
-        //             body: JSON.stringify({
-        //                 nombre: 'sergio',
-        //                 apeliidos: 'garcia',
-        //             }),
-        //         })
-        // .then((res) => res.json())
-        // .then((res) => { console.log(res); })
+
+
+      fetch('https://swapi.co/api/planets/3/', {
+          method: 'POST',
+          mode: 'cors',
+          headers: new Headers({ 'Content-Type': 'application/json' }),
+          body: JSON.stringify({
+              hola: 'asda',
+          }),
+      })
+        .then(res => res.json())
+        .then((res) => { console.log(res); })
+        
     });
-
-
-
-  
-    // db.onerror = function(event) {
-    //   alert("Database error: " + event.target.errorCode);
-    // };
 
 
     </script>
