--- a/src/renderer/pages/dashboard/table/table.scss
+++ b/src/renderer/pages/dashboard/table/table.scss
@@ -1,3 +1,8 @@
 .table {
     overflow: auto;
+    background-color: aliceblue;
+    
+    .ReactTable {
+        background-color: white;
+    }
 }
