--- a/src/renderer/pages/dashboard/topbar/topbar.scss
+++ b/src/renderer/pages/dashboard/topbar/topbar.scss
@@ -23,7 +23,7 @@
     }
 
     .top-bar__box {
-        // min-width: 300px;
+        min-width: 280px;
         width: 300px;
         // max-width: 400px;
         display: flex;
